[gd_scene load_steps=5 format=2]

[ext_resource type="Script" uid="uid://i6ofe57ijw6d" path="res://units/troops/troop.gd" id="1"]
[ext_resource type="PackedScene" path="res://projectiles/bullet.tscn" id="2"]
[ext_resource type="Script" uid="uid://c45qmbbaysqou" path="res://projectiles/projectile_spawner.gd" id="3"]

[sub_resource type="CapsuleMesh" id=1]

[node name="Troop" type="Node3D" groups=["needs_disable"]]
script = ExtResource( 1 )
unit_name = "Gunner"
aim_pos_height = 1.0
preview_size = 2.0
max_health = 50
move_speed = 4.0
approach_distance = 3.0

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D( 0.5, 0, 0, 0, -2.18557e-08, -0.5, 0, 0.5, -2.18557e-08, 0, 0.824866, 0 )
mesh = SubResource( 1 )
material/0 = null

[node name="ProjectileSpawner" type="Node3D" parent="."]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.00471, 0 )
script = ExtResource( 3 )
initial_wait_time = 0.5
refire_time = 0.2
projectile = ExtResource( 2 )
damage = 6

[connection signal="target_acquired" from="." to="ProjectileSpawner" method="set_target"]
[connection signal="target_lost" from="." to="ProjectileSpawner" method="set_target"]
[connection signal="spawn_projectile" from="ProjectileSpawner" to="." method="emit_spawn_projectile"]
